Bug 818218 - Add ExtendedJSONObject.parseJSONArray static method, use it, and reduce direct access to JSONParser.